fix contrast issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -110,7 +110,7 @@ footer {
 }
 
 .beta-warning {
-  background-color: #ef241c;
+  background-color: #b94a48;
   color: #fff;
   width: 100%;
   padding: .5em;
